<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Dialerpad!</string>
    <string name="app_name">TEE-Phone</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Zero">0</string>
    <string name="Hash">#</string>
    <string name="Star">*</string>
    <string name="Call">Call</string>
    <string name="Back">Back Space</string>
    <string name="prompt">Dial Number</string>
    
    <!-- General -->
    <skip />
    <!-- Application name -->
    <string name="application_name">Gestures Builder</string>
    <!-- Title, name of the activity used to create a gesture -->
    <string name="label_create_gesture">Create a gesture</string>

    <!-- Buttons -->
    <skip />
    <!-- Label, button used to add a gesture -->
    <string name="button_add">Add gesture</string>
    <!-- Label, button used to reload all gestures -->
    <string name="button_reload">Reload</string>
    <!-- Label, button used to cancel the operation of adding a gesture -->
    <string name="button_discard">Discard</string>
    <!-- Label, button used to save a gesture newly created -->
    <string name="button_done">Done</string>
    
    <!-- Gestures -->
    <skip />
    <!-- Label, prompt asking the user to enter the name of the gesture -->
    <string name="prompt_gesture_name">Name</string>
    <!-- Error message, informs the user he needs to enter a name before saving a gesture -->
    <string name="error_missing_name">You must enter a name</string>
    <!-- success message, tells the user where the gesture was saved -->
    <string name="save_success">Gesture saved in %s</string>
    <!-- Buttons in Rename gesture dialog box -->
    <string name="rename_action">OK</string>
    <!-- Buttons in Rename gesture dialog box -->
    <string name="cancel_action">Cancel</string>
    <!-- Message displayed when the user opens the gestures settings screen -->
    <string name="gestures_loading">Loading gestures...</string>
    <!-- Message displayed when the user has no gestures -->
    <string name="gestures_empty">No gestures</string>
    <!-- Title of the screen used to view/manage gestures -->
    <string name="gestures_activity">Gestures</string>
    <!-- Noun, menu item used to rename a gesture -->
    <string name="gestures_rename">Rename</string>
    <!-- Noun, menu item used to remove a gesture -->
    <string name="gestures_delete">Delete</string>
    <!-- Message displayed when a gesture is successfully deleted -->
    <string name="gestures_delete_success">Gesture deleted</string>
    <!-- Title of dialog box -->
    <string name="gestures_rename_title">Rename gesture</string>
    <!-- Label of gesture name field in Rename gesture dialog box -->
    <string name="gestures_rename_label">Gesture name</string>
    <!-- Message, displayed when the sdcard cannot be found, 1st parameter is the name of the file that stores the gestures -->
    <string name="gestures_error_loading">Could not load %s. Make sure you have a mounted SD card.</string>

</resources>