<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >



    <EditText
        android:id="@+id/EditTextPhoneNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />


    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >





        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="fill_horizontal" >

            <Button
                android:id="@+id/button1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:text="@string/One" />


            <Button
                android:id="@+id/button2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/Two" />

            <Button
                android:id="@+id/button3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="fill_horizontal"
                android:layout_weight="1"
                android:text="@string/Three" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >



            <Button
                android:id="@+id/button4"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/Four" />



            <Button
                android:id="@+id/button5"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/Five" />


            <Button
                android:id="@+id/button6"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/Six" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >



            <Button
                android:id="@+id/button7"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/Seven" />



            <Button
                android:id="@+id/button8"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/Eight" />


            <Button
                android:id="@+id/button9"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/Nine" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >



            <Button
                android:id="@+id/button10"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/Star" />



            <Button
                android:id="@+id/button11"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/Zero" />


            <Button
                android:id="@+id/button12"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/Hash" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >


            <Button
                android:id="@+id/button13"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_call"
                android:text="@string/Call" />


            <Button
                android:id="@+id/button14"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_backspace"
                android:text="@string/Back" />

        </TableRow>
    </TableLayout>

</LinearLayout>